[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "superleaf"
version = "0.0.1"
authors = [
    {name = "Erik Schomburg", email = "eschomburg@gmail.com"},
]
description = ""
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
test = ["pytest"]
jupyter = ["jupyter"]

[tool.setuptools.packages.find]
exclude = ["notebooks", "tests"]
