[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "superleaf"
version = "0.0.2"
authors = [
    {name = "Erik Schomburg", email = "eschomburg@gmail.com"},
]
description = ""
requires-python = ">=3.7"
dependencies = [
    "ipython",
    "multiprocess",
    "numpy",
    "pandas",
    "pendulum",
    "scipy",
]

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]
jupyter = ["jupyter"]

[tool.setuptools.packages.find]
exclude = ["notebooks", "tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
